# Axiom

./: README.md  pyproject.toml
src/axiom/: __init__.py  exceptions.py  init.py
src/axiom/core/: axis.py  module.py  tensor.py
tests/: example.py  test.py
