[project]
name = "axiom"
version = "0.1.0"
description = "A high perfomance ML tensor manipulation library"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.5",
    "jax>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]